# myshell

./: README.md  pyproject.toml  run.py
docs/: progress_minggu_1.md
examples/: minggu_1_session.txt
src/myshell/: __init__.py  __main__.py  cli.py  config.py  context.py  errors.py  executor.py  history.py  parser.py  prompt.py  shell.py
src/myshell/builtins/: __init__.py  base.py  core.py
tests/: test_parser.py  test_shell.py
