[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "myshell-kel9"
version = "0.1.0"
description = "Progress minggu pertama custom shell Python kelompok 9."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
myshell = "myshell.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
